<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>pendulum_utils</name>
    <version>0.0.1</version>
    <description>
      pendulum_utils
    </description>
    <maintainer email="lzs_1993@qq.com">ZhenshengLi</maintainer>
    <license>Commercial</license>
    <url>http://ZhenshengLi</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>lifecycle</build_depend>
    <build_depend>lifecycle_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>lifecycle</run_depend>
    <run_depend>lifecycle_msgs</run_depend>
</package>
